<resources>

    <string name="app_name">Digi_Yatra_1.2</string>


    <string name="Wallet_Fragment_1">Wallet</string>
    <string name="Home_Fragment_2">Home</string>
    <string name="Profile_Fragment_3">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_your_credential">Add your Credential</string>
    <string name="what_credential_would_you_like_to_add">What credential would you like to add?</string>
    <string name="digi_yatra">Digi Yatra</string>
    <string name="identity_credential_issuer">Identity Credential Issuer</string>
    <string name="acknowledgement">Acknowledgement</string>
    <string name="to_create_a_digi_yatra_identity_credential">To create a Digi Yatra Identity Credential</string>
    <string name="face_id" color="#000000"><font fgcolor="#000000">1. Face ID</font></string>
    <string name="govt_photo_id_card" color="#000000">2. Govt photo ID Card</string>
    <string name="your_data_is_safe_and_in_your_control">Your data is safe and in your control.</string>
    <string name="learn_more"><u>Learn More</u></string>
    <string name="i_acknowledge">I Acknowledge</string>
    <string name="ok">Ok</string>
    <string name="cancel">CANCEL</string>
    <string name="securely_access_your_govt_issued_ids">Securely access your Govt issued IDs</string>
    <string name="continue_with_digilocker">Continue with Digilocker</string>
    <string name="verify_id">Verify ID</string>
    <string name="set_up_face_id">Set up Face ID</string>
    <string name="review">Review</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="validating_selfie">Validating \nSelfie</string>
    <string name="checking_liveness">Checking\n liveness</string>
    <string name="verification_successful">Verification \nSuccessful</string>
    <string name="title_activity_add_credentials_cowin">AddCredentialsCowinActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>