<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_corner"
    android:padding="@dimen/_24sdp"
    android:theme="@style/Theme.AppCompat.CustomTheme">

    <TextView
        android:id="@+id/full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acknowledgement"
        android:textColor="#000000"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/to_create_a_digi_yatra_identity_credential"
        android:textColor="#000000"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="@id/full_name"
        app:layout_constraintTop_toBottomOf="@id/full_name" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"

        android:fontFamily="@font/roboto_regular"

        android:orientation="vertical"
        android:text="@string/face_id"
        android:textColor="#000000"

        android:textSize="@dimen/_8ssp"
        app:layout_constraintStart_toStartOf="@id/full_name"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

<!--    &lt;!&ndash;<TextView-->
<!--        android:id="@+id/textView29"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/_15sdp"-->
<!--        android:fontFamily="@font/roboto_regular"-->
<!--        android:text="@string/face_id"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="@dimen/_8ssp"-->
<!--        app:layout_constraintStart_toStartOf="@id/txt_name"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView28" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView32"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/_5sdp"-->
<!--        android:fontFamily="@font/roboto_regular"-->
<!--        android:text="@string/govt_photo_id_card"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="@dimen/_8sdp"-->
<!--        app:layout_constraintStart_toStartOf="@id/txt_name"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView29" />&ndash;&gt;-->

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/your_data_is_safe_and_in_your_control"
        android:textColor="#000000"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintStart_toStartOf="@id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:fontFamily="@font/roboto_italic"
        android:text="@string/learn_more"
        android:textColor="#002E56"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textView37"
        app:layout_constraintStart_toEndOf="@+id/textView37"
        app:layout_constraintTop_toTopOf="@+id/textView37" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_minus5sdp"
        android:text="@string/i_acknowledge"
        android:textColor="#555555"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@id/full_name"
        app:layout_constraintTop_toBottomOf="@id/textView37" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/OkBtn2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/ok"
        android:textColor="#ffffff"
        app:backgroundTint="#979797"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/cancel"
        android:textColor="#002E56"
        app:layout_constraintBottom_toBottomOf="@id/OkBtn2"
        app:layout_constraintEnd_toStartOf="@+id/OkBtn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/OkBtn2"
        app:strokeColor="#002E56" />
</androidx.constraintlayout.widget.ConstraintLayout>