<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".fragments.AddDataUrlActivity">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_150sdp"
        android:layout_marginStart="@dimen/_minus25sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wave_signup" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:text="Add your credential"
        android:textColor="#000000"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintStart_toEndOf="@+id/backBtn1"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:id="@+id/dot1"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:background="@drawable/bg_circle"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dot2"
        app:layout_constraintTop_toBottomOf="@id/textView8" />
    <TextView
        android:id="@+id/txt_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_id"
        android:textAllCaps="false"
        android:textColor="#333333"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/dot1"
        app:layout_constraintStart_toStartOf="@id/dot1"
        app:layout_constraintEnd_toEndOf="@id/dot1"/>

    <View
        android:id="@+id/dot2"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:background="@drawable/bg_circle"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@id/dot1"
        app:layout_constraintEnd_toStartOf="@id/dot3"
        app:layout_constraintTop_toBottomOf="@id/textView8" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_up_face_id"
        android:textAllCaps="false"
        android:textColor="#333333"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/dot2"
        app:layout_constraintStart_toStartOf="@id/dot2"
        app:layout_constraintEnd_toEndOf="@id/dot2"/>
    <View
        android:id="@+id/dot3"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:background="@drawable/bg_circle"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@id/dot2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView8" />
    <TextView
        android:id="@+id/review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review"
        android:textAllCaps="false"
        android:textColor="#333333"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/dot3"
        app:layout_constraintStart_toStartOf="@id/dot3"
        app:layout_constraintEnd_toEndOf="@id/dot3"/>

    <ImageButton
        android:id="@+id/backBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:background="#EBF3FC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView8"
        app:layout_constraintBottom_toBottomOf="@id/textView8"
        app:srcCompat="@drawable/ic_arrow_back"
        app:tint="#002E56" />


    <TextView
        android:id="@+id/txt_last_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginTop="@dimen/_75sdp"
        android:text="@string/securely_access_your_govt_issued_ids"
        android:fontFamily="@font/poppins_medium"
        android:textAlignment="center"
        android:textColor="#002E56"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/review"
        app:layout_constraintStart_toStartOf="@id/txt_verify"
        app:layout_constraintTop_toBottomOf="@+id/txt_verify"/>

    <ImageButton
        android:id="@+id/imageBtn"
        android:layout_width="@dimen/_34sdp"
        android:layout_height="@dimen/_37sdp"
        android:layout_marginStart="@dimen/_51sdp"
        android:background="#EBF3FC"
        app:layout_constraintBottom_toBottomOf="@+id/UrlBtn"
        app:layout_constraintEnd_toStartOf="@+id/UrlBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/UrlBtn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/group_7521" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/UrlBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_with_digilocker"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto_medium"
        app:cornerRadius="@dimen/_5sdp"
        app:backgroundTint="#002E56"
        android:textColor="#ffffff"
        android:layout_marginTop="@dimen/_21sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_last_name" />
    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>